Closed Bug 750062 Opened 13 years ago Closed 13 years ago

Assert preconditions in IsVisTextNode

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: Ms2ger, Assigned: Ms2ger)

Details

Attachments

(1 file)

Attached patch Patch v1Splinter Review
I checked all the callers, and they get the preconditions right.
Attachment #619393 - Flags: review?(ehsan)
Comment on attachment 619393 [details] [diff] [review] Patch v1 Review of attachment 619393 [details] [diff] [review]: ----------------------------------------------------------------- ::: editor/libeditor/html/nsHTMLEditor.cpp @@ +4592,5 @@ > bool aSafeToAskFrames) > { > + MOZ_ASSERT(aNode); > + MOZ_ASSERT(aNode->NodeType() == nsIDOMNode::TEXT_NODE); > + MOZ_ASSERT(outIsEmptyNode); Nit: aNode && outIsEmptyNode
Attachment #619393 - Flags: review?(ehsan) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: