Bug 750062 - Assert preconditions in IsVisTextNode; r=ehsan